# TinyHelper

./: .gitignore  HANDOFF.md  LICENSE  README.md  locate_samples.jsonl  main.py  preview_island_manual_check.py  pyproject.toml  test_vision.py
.iris_data/config/: config.yaml
app/: dynamic_island.py  hotkey.py  llm_bridge.py  locate_bridge.py  main_window.py  transcript_bridge.py  tts_bridge.py  vision_locate_bridge.py  wake_word_bridge.py
aura/: controller.py  states.py
aura/renderer/: base.py  glow_renderer.py  null_renderer.py
config/: default_config.yaml  paths.py  schema.py  settings.py
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md  TODO.md
iris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm/: engine.py
memory/: store.py
speech/: listening_session.py  transcriber.py
tests/: test_hotkey.py  test_llm_engine.py  test_main_vision_resize.py  test_memory_store.py  test_ocr.py  test_settings.py  test_timing.py  test_transcriber.py  test_tts_engine.py  test_vision_model.py
tts/: engine.py
utils/: logger.py  timing.py
vision/: capture.py  model.py  ocr.py
voice/: audio_stream.py  service.py  wake_word.py
