[project]
name = "iris"
version = "0.1.0"
description = "Iris — a fully local, voice-first AI desktop copilot for Windows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Iris Project" }
]

dependencies = [
    "PySide6>=6.7.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
]

# Heavier / hardware-facing dependencies are grouped as optional extras so the
# app can be installed incrementally as each milestone introduces them.
# They are NOT installed yet at Milestone 1 — this is just where they will live.
[project.optional-dependencies]
speech = [
    "faster-whisper>=1.0.0",
    "openwakeword>=0.6.0",
    "sounddevice>=0.4.6",
]
llm = [
    "llama-cpp-python>=0.2.90",
    "huggingface_hub>=0.23.0",
]
vision = [
    "mss>=9.0.1",
    "opencv-python>=4.10.0",
    "onnxruntime-gpu>=1.18.0",
]
windows = [
    "pywin32>=306; sys_platform == 'win32'",
]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
iris = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "aura*", "voice*", "speech*", "llm*", "vision*", "overlay*", "memory*", "automation*", "config*", "utils*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = false
